--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@project-serum/swap-ui",
-  "version": "0.2.3",
+  "name": "@cyclos-io/swap-ui",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "homepage": "https://github.com/project-serum/swap-ui",
