feat: Lazy load and cache OpenOrders accounts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@project-serum/serum": "^0.13.58",
     "@project-serum/swap": "^0.1.0-alpha.32",
     "@solana/spl-token": "^0.1.8",
-    "@use-it/interval": "^1.0.0"
+    "@use-it/interval": "^1.0.0",
+    "usehooks-ts": "^1.0.4"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
