--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@project-serum/swap": "^0.1.0-alpha.32",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.275",
+    "i18next": "^21.3.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
+    "react-i18next": "^11.13.0",
     "usehooks-ts": "1.0.4"
   },
   "peerDependencies": {
